[project]
name = "diffmodel-i"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.53.1",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "transformers>=5.0.0",
]
